# hexaplex-formation

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
docs/: diffraction-cautions.md  formation-hypotheses.md  research-roadmap.md  schrodinger-bridge-framing.md  sidechain_antiparallel_pipeline_update_20260625.md
scripts/: adapt_asem_radial_profiles.py  analyze_aleph_fingerprint.py  analyze_asem_omega_series_struct2.py  analyze_asem_peptide_dihedral_candidates.py  analyze_asem_twist_registry_shift.py  analyze_asem_twist_series_structures.py  analyze_backbone_distance_window_attribution.py  analyze_base_length_sweep_features.py  analyze_compact_twist_asem_corrected.py  analyze_distance_window_attribution.py  analyze_length_twist_diffraction_sensitivity.py  analyze_mini_hexaplex_features.py  analyze_mini_hexaplex_helicity.py  analyze_pnab_twist_series.py  analyze_seed_6_7_tradeoff.py  analyze_seed_6_7_transition.py  analyze_seed_bridge_ordering.py  analyze_seed_contact_networks.py  analyze_seed_formation_order_parameters.py  analyze_seed_starting_ensemble_costs.py  audit_hxc590_s1_pnab_yaml_inputs.py  audit_hxc590_s1_twist_rise_generation.py  benchmark_debye_methods.py  block_contact_decomposition.py  build_ai_candidate_inputs.py  build_extended_asem_twist_stacks.py  build_full_omega172_transfer_model.py  build_intermediate_ladder.py  build_strand_map_candidate.py  build_twist_rise_grid_manifest.py  build_twist_rise_observed_peaks_table.py  combined_evidence_table.py  compare_fitted_helical_metrics.py  compare_formation_metrics.py  contact_map.py  (+79 more)
(+794 files in other folders)
